Changelog
=========

3.1 (unreleased)
----------------

- Fixed redirect when creating a subtask.
  [phgross]

- Reworked forwarding refuse and reassign functionality.
  [phgross]

- Reworked inbox tabs.
  [phgross]

- Activate reporting actions (dossier and tasks) for every user.
  [phgross]

- Dossiercover: Implements breadcrumb cropping and adjust fonz size.
  [phgross]

- Dropped inbox_group agency for tasks in a oneclient setup.
  [phgross]

- Task workflow: Documents inside a task, aren't editable when the dossier is closed.
  [phgross]

- Reworked document_author resolution and displaying value in listings.
  [phgross]

- LDAP import: Use the respective property from LDAPUserFolder to determine which is the
  UID attribute.
  [lgraf]

- LDAP util: Make determining multi-valuedness of attributes more robust
  in case of broken LDAP schemas.
  [lgraf]

- LDAP util: Get user object classes from LDAPUserFolder instead of hardcoding them.
  [lgraf]

- Added modify deadline form and functionality.
  [phgross]


3.0 (2013-08-14)
----------------

- Removed client prefixes in single client setups.
  [lknoepfel]

- Make exposator work for both izug.basetheme and plonetheme.teamraum.
  [Julian Infanger]

- Fixed imports in the processInputs monkeypatch.
  [phgross]

- Dossier overview: only list active subdossiers.
  [phgross]

- Rewrote LDAP synchronisation in pure Python instead of Transmogrifier.
  [lgraf]

- Removed development LDAP configuration for now.
  [lgraf]

- Fix import of HAVE_BLOBS from plone.namedfile.
  [lgraf]

- Repository Setup: Moved config and blueprints from zugpolicy.base in to core.
  [phgross]

- Dossier: Fixed start- and end-date validation in edit forms.
  [phgross]

- Task: Adjust workflow, so that documents inside a task, aren't editable
  when the dossier is closed.
  [phgross]

- AdvancedSearch: Added special description for the portal types field
  in a multiclientsetup.
  [phgross]
