@@ -4,6 +4,10 @@ Changelog
 3.1 (unreleased)
 ----------------
 
+- LDAP import: If server doesn't support page controls, fall back to issuing
+  search request without them.
+  [lgraf]
+
 - Fixed redirect when creating a subtask.
   [phgross]
 
